Bug 1772073 [Wayland] Call gtk_window_set_transient_for() only if widget parent is changed r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D164194